# jnana

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
benches/: benchmarks.rs
content/profiles/: developer.toml  educator.toml  full.toml  homesteader.toml  survival.toml
content/sources/: fao_agriculture.toml  field_medicine.toml  ifixit.toml  osm_world.toml  wikimed.toml  wikipedia_en.toml  wikivoyage.toml  wiktionary.toml
docs/architecture/: overview.md
docs/development/: roadmap.md
examples/: basic.rs
scripts/: bench-history.sh
src/: content.rs  domain.rs  download.rs  entry.rs  error.rs  lib.rs  linker.rs  logging.rs  portal.rs  profile.rs  provider.rs  registry.rs  search.rs  source.rs  storage.rs
src/providers/: hisab.rs  khanij.rs  kimiya.rs  mod.rs  tanmatra.rs
tests/: integration.rs
