[package]
name = "jnana"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Jnana — the foundation of knowing. Unified knowledge system for AGNOS"
homepage = "https://github.com/MacCracken/jnana"
repository = "https://github.com/MacCracken/jnana"
readme = "README.md"
documentation = "https://docs.rs/jnana"
keywords = ["knowledge", "offline", "reference", "education", "science"]
categories = ["science", "text-processing"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]
publish = false

[features]
default = ["std"]
std = ["serde/std", "thiserror/std"]
full = ["std", "logging", "serve", "download"]
logging = ["dep:tracing-subscriber"]
serve = []
download = []

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = "1"
toml = "0.8"
thiserror = { version = "2", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "benchmarks"
harness = false
