[package]
name = "jnana"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Jnana — the foundation of knowing. Unified knowledge system for AGNOS"
homepage = "https://github.com/MacCracken/jnana"
repository = "https://github.com/MacCracken/jnana"
readme = "README.md"
documentation = "https://docs.rs/jnana"
keywords = ["knowledge", "offline", "reference", "education", "science"]
categories = ["science", "text-processing"]
exclude = [".claude/", ".github/", "docs/", "scripts/", "benchmark-results/", "coverage/"]
publish = false

[features]
default = ["std"]
std = ["serde/std", "thiserror/std"]
full = ["std", "logging", "serve", "download"]
logging = ["dep:tracing-subscriber"]
serve = []
download = ["dep:sha2"]

# AGNOS science crate providers (from crates.io)
hisab = ["dep:hisab"]
kimiya = ["dep:kimiya"]
tanmatra = ["dep:tanmatra"]
khanij = ["dep:khanij"]
agnos-all = ["hisab", "kimiya", "tanmatra", "khanij"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = "1"
toml = "0.8"
thiserror = { version = "2", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
sha2 = { version = "0.10", optional = true }

# AGNOS science crates (optional)
hisab = { version = "1.3", optional = true }
kimiya = { version = "1.1", optional = true }
tanmatra = { version = "1.1", optional = true }
khanij = { version = "1.1", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
serde_json = "1"
tempfile = "3"

[[bench]]
name = "benchmarks"
harness = false
